完善代码，现在所有的转换器都可以转化了